# communication

./: .gitignore  Containerfile  MAKEFILE_README.md  Makefile  score-communication.spec
score/message_passing/non_allocating_future/: non_allocating_future_unit_test.cpp
score/mw/com/example/ipc_bridge/: Cargo.toml  ipc_bridge.rs  main.rs
score/mw/com/example/ipc_bridge/etc/: mw_com_config.json
score/mw/com/impl/: instance_identifier.cpp
score/mw/com/impl/bindings/lola/: event_data_control.cpp  i_runtime.h  proxy.cpp  runtime.cpp  runtime.h  shm_path_builder.cpp  shm_path_builder.h  skeleton.cpp  transaction_log.cpp  transaction_log_set.cpp
score/mw/com/impl/bindings/lola/tracing/: tracing_runtime.cpp
score/mw/com/impl/configuration/: ara_com_config_schema.json  config_parser.cpp  global_configuration.cpp  global_configuration.h  lola_service_instance_deployment.cpp
score/mw/com/impl/plumbing/: skeleton_binding_factory_impl.cpp  skeleton_service_element_binding_factory_impl.h
score/mw/com/impl/rust/: Cargo.toml  lib.rs  macros.rs  proxy_bridge.cpp  proxy_bridge.rs  skeleton_bridge.rs
score/mw/com/impl/tracing/: tracing_runtime.cpp  tracing_runtime_trace_test.cpp
score/mw/com/impl/tracing/configuration/: tracing_filter_config_parser.cpp
